2011-12-15  Igor Oliveira  <igor.oliveira@openbossa.org>

        [Qt] Support requestAnimationFrame API
        https://bugs.webkit.org/show_bug.cgi?id=74528

        Add build-option for requestAnimationFrame feature.

        Reviewed by Kenneth Rohde Christiansen.

        * qmake/mkspecs/features/features.prf:

2011-12-15  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>

        [Qt] Don't add WebCoreSupport and WebKit APIs to include WebCore's include path

        Reviewed by Simon Hausmann.

        * qmake/mkspecs/features/webcore.prf:

2011-12-15  Michael Brüning  <michael.bruning@nokia.com>

        [QT][WK2]Add (experimental) viewport info view to Minibrowser/qt.
        https://bugs.webkit.org/show_bug.cgi?id=72893

        Reviewed by Kenneth Rohde Christiansen.

        This patch extends QQuickWebViewExperimental by a property named
        viewportInfo, which contains the viewport scalability and
        layout and contents size information. This property is exposed to
        QML through the experimental extension for QQuickWebView.

        * MiniBrowser/qt/MiniBrowser.pro:
        * MiniBrowser/qt/MiniBrowser.qrc:
        * MiniBrowser/qt/icons/info.png: Added.
        * MiniBrowser/qt/qml/BrowserWindow.qml:
        * MiniBrowser/qt/qml/ViewportInfoItem.qml: Added.

2011-12-15  Shinya Kawanaka  <shinyak@google.com>

        [chromium] WebViewHost::requestCheckingOfText should return immediately if text is empty.
        https://bugs.webkit.org/show_bug.cgi?id=74586

        Reviewed by Hajime Morita.

        No new tests. Covered by existing tests.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::requestCheckingOfText):
          Returns immediately if text is empty.

2011-12-15  Alexander Færøy  <ahf@0x90.dk>

        [Qt] QtWebKit fails to build on Mac OS X after r102776
        https://bugs.webkit.org/show_bug.cgi?id=74593

        Reviewed by Simon Hausmann.
